# drbug

./: .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: attach.rs  main.rs  parsing.rs  repl.rs  run.rs
cli/src/repl/: breakpoint.rs  commands.rs  disassemble.rs  memory.rs  mod.rs  register.rs
libdrbug/: Cargo.toml
libdrbug/src/: address.rs  disassembly.rs  error.rs  errors.rs  lib.rs  pipe.rs  process.rs  util.rs
libdrbug/src/breakpoint/: list.rs  mod.rs  site.rs
libdrbug/src/process/: breakpoint.rs  memory.rs  mod.rs  state.rs
libdrbug/src/reg/: info.rs  mod.rs  value.rs
libdrbug/src/register/: mod.rs  value.rs
libdrbug/src/tests/: breakpoint_test.rs  memory_test.rs  mod.rs  process_test.rs  reg_test.rs  register_test.rs  util.rs
test/asm/: reg_read.s  reg_write.s
test/rust/: Cargo.toml
test/rust/src/: hello.rs  memory.rs
test/targets/: Cargo.toml
