[package]
name = "drb"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
clap = { workspace = true }
libdrbug = { workspace = true }
nix = { workspace = true }
rustyline = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
