[package]
name = "drb"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
libdrbug = { workspace = true }
rustyline = { workspace = true }
shlex = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
