[package]
name = "drb"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
iced-x86 = { workspace = true }
itertools = { workspace = true }
libdrbug = { workspace = true }
paste = { workspace = true }
rustyline = { workspace = true }
shlex = { workspace = true }

[dev-dependencies]
assertables = { workspace = true }
rstest = { workspace = true }
