[package]
name = "libdrbug"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
assertables = { workspace = true }
rstest = { workspace = true }
