[package]
name = "libdrbug"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
derive_more = { workspace = true }
iced-x86 = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assertables = { workspace = true }
elf = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
